--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
+    "rollup": "^4.50.1",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
@@ -35,5 +36,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "vite": "^6.3.1"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
