--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "rollup": "^3.29.5",
-    "vite": "^5.4.20"
+    "vite": "^5.3.0",
+    "rollup": "^4.18.0"
   },
   "engines": {
     "node": "20.x"
